--- a/main.css
+++ b/main.css
@@ -86,12 +86,16 @@ body {
   .carousel {
     width: 100%;
     height: auto;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 }
 @media (min-width:1366px) {
   .carousel {
     width: 100%;
     height: auto;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
 /*@media (min-width:1366px) {
