--- a/main.css
+++ b/main.css
@@ -88,13 +88,16 @@ body {
     margin-right: 5%;
   }
   .brand {
-    padding-left: 20px;
+    padding-left: 50px;
   }
 }
 @media (min-width:1600px) {
   .carousel {
     margin-left: 10%;
     margin-right: 10%;
+  }
+  .brand {
+    padding-left: 50px;
   }
 }
 /*@media (min-width:1366px) {
